--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Doutorando na Universidade de São Paulo (USP), onde contribui junto ao Instituto de Ciências Matemáticas e de Computação (ICMC), campus de São Carlos. Possui 12 anos de experiência na área de desenvolvimento de software, com ênfase na análise, construção e arquitetura de sistemas Web e Mobile. Além disso, é certificado nas plataformas .NET (Microsoft), Java (Oracle) e Android (Google). Atualmente é Líder Técnico no time de Educação da DIO, onde é responsável por orquestrar os conteúdos educacionais da plataforma.</p>
+            <p>Sou formada em Engenharia Florestal (ESALQ/USP), e atualmente participo de um programa de aceleração e desenvolvimento de liderança feminina nas organizações. Sempre fui uma pessoa muito curiosa, dedicada, gosto de aprender coisas novas, diferentes culturas e pessoas. Sou muito comunicativa e movida pelos desafios. Gosto de trabalhar em equipe, inovar e trazer resultados em conjunto.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,9 +98,9 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
-              <p>Planejar o roadmap dos conteúdos educacionais da plataforma, tendo em vista as principais tendências de mercado e necessidades das empresas parceiras. Além de garantir que as experiências de aprendizagem tenham total sinergia com a nossa metodologia educacional.</p>
+              <h5 class="w3-opacity"><b>Dexco</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2022 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <p>Participante do programa DELAS - programa de aceleração e desenvolvimento de liderança feminina nas operações fabris e florestais. Durante o primeiro ciclo do projeto, atuei na área de manutenção mecanica das operações florestais de colheita e silvicultura. Como parte do escopo do programa, participei de fóruns e treinamentos sobre gestão de pessoas, questões de diversidade de genero, raça, etc., autodesenvolvimento e liderança nas organizações.</p>
             </div>
           </div>
   
@@ -110,7 +110,7 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -126,8 +126,8 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023</h6>
-              <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2017 - Julho 2022</h6>
+              <p>Bacharelado em Engenharia Florestal</p>
             </div>
           </div>
 
