--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
               <h2>Lígia Veridiana Garcia</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Líder Técnica na Dexco</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Itapetininga-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>ligia.vgarcia2@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(19) 994770017</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Líder Técnica na Dexco</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Itapetininga-SP, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ligia.vgarcia2@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(19) 994770017</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
               </p>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
               </div>
               <p>Android</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
               </div>
               <p>Koltin</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
               <p>Spring Framework</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:60%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:60%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
               </div>
               <br>
             </div>
@@ -89,28 +89,28 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
             <p>Sou formada em Engenharia Florestal (ESALQ/USP), e atualmente participo de um programa de aceleração e desenvolvimento de liderança feminina nas organizações. Sempre fui uma pessoa muito curiosa, dedicada, gosto de aprender coisas novas, diferentes culturas e pessoas. Sou muito comunicativa e movida pelos desafios. Gosto de trabalhar em equipe, inovar e trazer resultados em conjunto.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Dexco</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2022 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro - 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>Participante do programa DELAS - programa de aceleração e desenvolvimento de liderança feminina nas operações fabris e florestais. Durante o primeiro ciclo do projeto, atuei na área de manutenção mecanica das operações florestais de colheita e silvicultura. Como parte do escopo do programa, participei de fóruns e treinamentos sobre gestão de pessoas, questões de diversidade de genero, raça, etc., autodesenvolvimento e liderança nas organizações.</p>
             </div>
           </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -126,17 +126,17 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2017 - Julho 2022</h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2017 - Julho 2022</h6>
               <p>Bacharelado em Engenharia Florestal</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-indigo">
+              <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/falvojr/copa-2022-android" target="_blank">falvojr/copa-2022-android</a>
               </h6>
@@ -144,7 +144,7 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h6 class="w3-text-indigo">
+              <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="https://gitlab.com/denilsonbonatti/kubernetes-projeto2-dio" target="_blank">denilsonbonatti/kubernetes-projeto2-dio</a>
               </h6>
@@ -161,7 +161,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-indigo w3-center w3-margin-top">
+    <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/liigiagarcia2" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/ligiavgarcia/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
