--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
   </head>
 
-  <body class="w3-black" cz-shortcut-listen="true">
+  <body class="w3-dark-grey cz-shortcut-listen="true">
   
     <!-- Page Container -->
     <div class="w3-content w3-margin-top" style="max-width:1400px;">
@@ -30,7 +30,7 @@
         <!-- Left Column -->
         <div class="w3-third">
   
-          <div class="w3-dark-grey w3-text-white w3-card-4">
+          <div class="w3-black w3-text-white w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
               <h2>Lígia Veridiana Garcia</h2>
