--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- Right Column -->
         <div class="w3-twothird">
     
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-pink"></i>Sobre</h2>
             <p>Sou formada em Engenharia Florestal (ESALQ/USP), e atualmente participo de um programa de aceleração e desenvolvimento de liderança feminina nas organizações. Sempre fui uma pessoa muito curiosa, dedicada, gosto de aprender coisas novas, diferentes culturas e pessoas. Sou muito comunicativa e movida pelos desafios. Gosto de trabalhar em equipe, inovar e trazer resultados em conjunto.</p>
           </div>
