colors text and columm

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                 <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-pink"></i>Skills</b>
               </p>
               <p>Java</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-light-white w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-pink" style="width:100%">100%</div>
               </div>
               <p>Android</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-light-white w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-pink" style="width:80%">80%</div>
               </div>
               <p>Koltin</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-light-white w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-pink" style="width:70%">70%</div>
               </div>
               <p>Spring Framework</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-light-white w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-pink" style="width:70%">70%</div>
               </div>
               <br>
@@ -67,15 +67,15 @@
                 <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-pink"></i>Idiomas</b>
               </p>
               <p>Português</p>
-              <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-light-white w3-round-xlarge">
                 <div class="w3-round-xlarge w3-pink" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
-              <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-light-white w3-round-xlarge">
                 <div class="w3-round-xlarge w3-pink" style="height:24px;width:60%"></div>
               </div>
               <p>Espanhol</p>
-              <div class="w3-light-grey w3-round-xlarge">
+              <div class="w3-light-white w3-round-xlarge">
                 <div class="w3-round-xlarge w3-pink" style="height:24px;width:25%"></div>
               </div>
               <br>
@@ -89,12 +89,12 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-black w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-pink"></i>Sobre</h2>
+            <h2 class="w3-text-white w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-pink"></i>Sobre</h2>
             <p>Sou formada em Engenharia Florestal (ESALQ/USP), e atualmente participo de um programa de aceleração e desenvolvimento de liderança feminina nas organizações. Sempre fui uma pessoa muito curiosa, dedicada, gosto de aprender coisas novas, diferentes culturas e pessoas. Sou muito comunicativa e movida pelos desafios. Gosto de trabalhar em equipe, inovar e trazer resultados em conjunto.</p>
           </div>
 
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
+            <h2 class="w3-text-white w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-pink"></i>Experiências
             </h2>
             <div class="w3-container">
@@ -104,8 +104,8 @@
             </div>
           </div>
   
-          <div class="w3-container w3-card w3-white">
-            <h2 class="w3-text-grey w3-padding-16">
+          <div class="w3-container w3-card w3-black">
+            <h2 class="w3-text-white w3-padding-16">
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-pink"></i>Educação
             </h2>
             <div class="w3-container">
@@ -131,8 +131,8 @@
             </div>
           </div>
 
-          <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16">
+          <div class="w3-container w3-card w3-black w3-margin-bottom">
+            <h2 class="w3-text-white w3-padding-16">
               <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-pink"></i>Projetos
             </h2>
             <div class="w3-container">
