--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-pink w3-center w3-margin-top">
+    <footer class="w3-container w3-black w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/liigiagarcia2" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/ligiavgarcia/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
